# zdailyscan

./: .env.example  .gitignore  DESIGN.md  Dockerfile  LICENSE  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  railway.toml  requirements.txt
.openspec/: progress.md
app/: aliexpress.py  config.py  main.py  models.py  pipeline.py  scheduler.py  storage.py
docs/: api-reference.md  architecture.md  operations.md
scripts/: update_progress.py  update_readme.py
tests/: test_analyzer.py  test_ci_workflow.py  test_config.py  test_dashboard.py  test_dashboard_phase2.py  test_health.py  test_issue103_auth_bus_ml_token.py  test_issue104_ml_search_proxy.py  test_issue107_persistent_storage.py  test_issue114_polling_persistence.py  test_issue115_no_firecrawl_fallback.py  test_issue117_crawl4ai_stealth.py  test_issue120_no_user_agent_generator_config.py  test_issue122_aliexpress_cookies_wait_for.py  test_issue124_cookie_domain_path.py  test_issue126_http_api.py  test_issue128_trend_analyzer.py  test_issue135_keyword_search.py  test_issue137_tech_filter.py  test_issue139_scrapling.py  test_issue141_scrapling_json.py  test_issue143_scrapling_httpx.py  test_issue145_js_tokens_keyword_fallback.py  test_issue147_undefined_key.py  test_issue150_accept_encoding_retry.py  test_issue154_subprocess_curl_undefined_key.py  test_issue159_session_cookies_curl.py  test_issue167_scan_status.py  test_issue178_pipeline_min_rating_keywords.py  test_issue42_settings_categories.py  test_issue46_aliexpress_credentials.py  test_issue57_aliexpress_settings.py  (+22 more)
(+93 files in other folders)
