[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "zdailyscan"
version = "0.1.0"
description = "Scanner diário de oportunidades AliExpress para LojaHi Select"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "pydantic-settings==2.9.1",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "anyio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
